--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -3,3 +3,42 @@
 #footer .wrapper {
   width: 960px;
 }
+
+/* clearfix
+----------------------------------------------------------------------*/
+
+.clearfix:after,
+#wrapper:after,
+.wrapper:after,
+#nav:after,
+.cols:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+}
+
+.clearfix,
+#wrapper,
+.wrapper,
+#nav,
+.cols {
+  display: inline-block;
+}
+
+html[xmlns] .clearfix,
+html[xmlns] #wrapper,
+html[xmlns] .wrapper,
+html[xmlns] #nav,
+html[xmlns] .cols {
+  display: block;
+}
+
+* html .clearfix,
+* html #wrapper,
+* html .wrapper,
+* html #nav,
+* html .cols {
+  height: 1%;
+}
